[package]
name = "project_Euler"
version = "0.1.0"
authors = ["Diogo Santos Martins <yogaxpto@gmail.com>"]

[dependencies]

[[bin]]
name = "problem_1"
path = "src/Problem_1/main.rs"

[[bin]]
name = "problem_2"
path = "src/Problem_2/main.rs"

[[bin]]
name = "problem_3"
path = "src/Problem_3/main.rs"

