[package]
name = "project_Euler"
version = "0.1.0"
authors = ["Diogo Santos Martins <yogaxpto@gmail.com>"]

[dependencies]
primal = "0.2"

[[bin]]
name = "problem_1"
path = "src/Problem_1/main.rs"

[[bin]]
name = "problem_2"
path = "src/Problem_2/main.rs"

[[bin]]
name = "problem_3"
path = "src/Problem_3/main.rs"

[[bin]]
name = "problem_4"
path = "src/Problem_4/main.rs"

[[bin]]
name = "problem_5"
path = "src/Problem_5/main.rs"

[[bin]]
name = "problem_6"
path = "src/Problem_6/main.rs"

[[bin]]
name = "problem_7"
path = "src/Problem_7/main.rs"

[[bin]]
name = "problem_8"
path = "src/Problem_8/main.rs"

[[bin]]
name = "problem_9"
path = "src/Problem_9/main.rs"

[[bin]]
name = "problem_10"
path = "src/Problem_10/main.rs"

