[package]
name = "project_Euler"
version = "0.1.0"
authors = ["Diogo Santos Martins <yogaxpto@gmail.com>"]

[dependencies]
primal = "0.2"

[[bin]]
name = "problem_1"
path = "src/Problem_01/main.rs"

[[bin]]
name = "problem_2"
path = "src/Problem_02/main.rs"

[[bin]]
name = "problem_3"
path = "src/Problem_03/main.rs"

[[bin]]
name = "problem_4"
path = "src/Problem_04/main.rs"

[[bin]]
name = "problem_5"
path = "src/Problem_05/main.rs"

[[bin]]
name = "problem_6"
path = "src/Problem_06/main.rs"

[[bin]]
name = "problem_7"
path = "src/Problem_07/main.rs"

[[bin]]
name = "problem_8"
path = "src/Problem_08/main.rs"

[[bin]]
name = "problem_9"
path = "src/Problem_09/main.rs"

[[bin]]
name = "problem_10"
path = "src/Problem_10/main.rs"

[[bin]]
name = "problem_11"
path = "src/Problem_11/main.rs"